added new feature for ai history